fixed horizontal scroll on Galaxy bug

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -256,6 +256,10 @@ p {
     text-align: right;
     line-height: 16px;
   }
+
+  .hero h1 {
+    font-size: 64px;
+  }
   .about-hero h2,
   h1,
   p {
